# pips-solver

./: 8x8-2x2-mechanical-proof.md  README.md  poly-pips.md  strategy.md
8x8-2x2/: Cargo.toml  README.md
claude_sonnet_4_5/: Cargo.toml
examples/: easy_2025-10-13_puzzle.txt  easy_2025-10-13_solution.txt  easy_2025-10-14_puzzle.txt  easy_2025-10-14_solution.txt  game-2025-08-18-easy.txt  game-2025-08-18-hard.txt  game-2025-08-18-medium.txt  game-2025-08-19-easy.txt  game-2025-08-19-hard.txt  game-2025-08-19-medium.txt  game-2025-08-20-easy.txt  game-2025-08-20-hard.txt  game-2025-08-20-medium.txt  game-2025-08-21-easy.txt  game-2025-08-21-hard.txt  game-2025-08-21-medium.txt  game-2025-08-22-easy.txt  game-2025-08-22-hard.txt  game-2025-08-22-medium.txt  game-2025-08-23-easy.txt  game-2025-08-23-hard.txt  game-2025-08-23-medium.txt  game-2025-08-24-easy.txt  game-2025-08-24-hard.txt  game-2025-08-24-medium.txt  (+354 more)
gpt_5_codex/: Cargo.toml
gpt_5_codex/output/: solution_counts.csv
gpt_5_codex/profiling/: README.md  run_flamegraph.sh
gpt_5_codex/src/: display.rs  lib.rs  main.rs
gpt_5_codex/src/generator/: mod.rs
gpt_5_codex/src/loader/: mod.rs  nyt.rs
gpt_5_codex/src/model/: assignment.rs  board.rs  constraint.rs  direction.rs  game.rs  mod.rs  piece.rs  pips.rs  placement.rs  point.rs
gpt_5_codex/src/polypips/: config.rs  generator.rs  mod.rs  rules.rs
gpt_5_codex/src/solver/: mod.rs
gpt_5_codex/src/solver_v2/: mod.rs
gpt_5_codex/src/util/: rng.rs
gpt_5_codex/tests/: count_solutions_cli.rs  solve_pips_cli.rs  solver_v2_tiling.rs
poly_games/: 2x2.cfg  (+9 more)
(+121 files in other folders)
