[package]
name = "pips-solver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", default-features = false, features = ["tls"] }
